--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-6 col-12 m-auto text-end" data-aos="fade-right" data-aos-offset="200">
+            <div class="col-sm-12 col-md-6 col-lg-6 col-12 m-auto text-end " data-aos="fade-right" data-aos-offset="200">
                 <img src="./Images/Sign-2.jpg" alt="" class="img-fluid img-thumbnail">
             </div>
         </div>
@@ -188,7 +188,7 @@
 
             <div>
                 <div class="row ms-5 ">
-                <div class="col-sm-12 col-md-4 col-lg-4 col-12 ">
+                <div class="col-sm-12 col-md-4 col-lg-4 col-12 my-5">
                     <div class="card" style="width: 18rem;">
                         <img src="./Images/Sign-4.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -199,7 +199,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-4 col-lg-4 col-12">
+                <div class="col-sm-12 col-md-4 col-lg-4 col-12 mt-5">
                     <div class="card" style="width: 18rem;">
                         <img src="./Images/Sign-5.png" class="card-img-top" alt="...">
                         <div class="card-body">
