--- a/index.html
+++ b/index.html
@@ -68,26 +68,27 @@
             </div>
             <div class="carousel-inner my-5">
                 <div class="carousel-item active">
-                    <img src="./Images/Sign-head.jpeg" class="d-block w-100" alt="...">
+                    <img src="./Images/store-image.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <h5 class="text-dark">We translate sign language. Automatically.</h5>
-                        <p class="text-dark">SignAll has developed technology leveraging AI and computer vision that is
-                            able to recognize and translate sign language. It can be used in both business and
-                            education..</p>
+                        <h5 class="head-text">We translate sign language. Automatically.</h5>
+                        <p class="text-light head-text-p">SignAll has developed technology leveraging AI and computer vision that is
+                            able to recognize and translate sign language.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./Images/sign-3.jpeg" class="d-block w-100" alt="...">
+                    <img src="./Images/Sign-head.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5 class="head-text text-dark">We translate sign language. Automatically.</h5>
+                        <p class="text-dark head-text-p">SignAll has developed technology leveraging AI and computer vision that is
+                            able to recognize and translate sign language. </p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./Images/sign.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5 class="head-text">We translate sign language. Automatically.</h5>
+                        <p class="text-light head-text-p">SignAll has developed technology leveraging AI and computer vision that is
+                            able to recognize and translate sign language. </p>
                     </div>
                 </div>
             </div>
