--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 col-12">
+                    <div class="col-sm-12 col-md-4 col-lg-4 col-12 mt-5">
                         <div class="card" style="width: 18rem;">
                             <img src="./Images/Sign -6.png" class="card-img-top" alt="...">
                             <div class="card-body">
