added signchat page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 Products
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">SignChat</a></li>
+                                <li><a class="dropdown-item" href="./Pages/signchat.html">SignChat</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
