--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -12,37 +12,33 @@
     <form action="">
         <!-- Headings for the form -->
         <div class="headingsContainer">
-            <h3>Sign in</h3>
-            <p>Sign in with your username and password</p>
+            <h3>Sign Up</h3>
+            <p>Sign Up with your username and password</p>
         </div>
 
         <!-- Main container for all inputs -->
         <div class="mainContainer">
             <!-- Username -->
-            <label for="username">Your Username</label>
-            <input type="text" placeholder="Enter Username" name="username" required>
+            <label for="username">Your Email:</label>
+            <input type="text" placeholder="Enter Email" name="username" required>
 
             <br><br>
 
             <!-- Password -->
-            <label for="pswrd">Your Password</label>
-            <input type="password" placeholder="Enter Password" name="pswrd" required>
+            <label for="pswrd">Create password:</label>
+            <input type="password" placeholder="Create Strong Password" name="pswrd" required>
 
             <!-- sub container for the checkbox and forgot password link -->
             <div class="subcontainer">
                 <label>
-                  <input type="checkbox" checked="checked" name="remember"> Remember me
+                  <input type="checkbox" checked="checked" name="remember" > Remember me
                 </label>
-                <p class="forgotpsd"> <a href="#">Forgot Password?</a></p>
             </div>
 
 
             <!-- Submit button -->
-            <button type="submit">Login</button>
-
-            <!-- Sign up link -->
-            <p class="register">Not a member? 
-                 <a href="signup.html" class="ragistration">Register here!</a></p>
+            <button type="submit" class="submit">Sign Up</button>
+            <p class="register">Welcome You....</p>
 
         </div>
 
